# req-tooling

./: .gitignore  Makefile  README.md  igtools-fhir-extractor.yaml  pyproject.toml  requirements.txt  sushi-config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.igtools/: config.json  config.yaml
.igtools/releases/: release_1_0_0.json  release_1_0_0.yaml  release_1_0_1.json  release_1_0_1.yaml  release_1_0_2.yaml  release_1_0_3.yaml  release_1_0_4.yaml
.igtools/releases/1_0_0/: IG-MED03867EEQ.yaml  IG-MED26526K0H.yaml  IG-MED29091JHN.yaml  IG-MED33770HUF.yaml  IG-MED40753QXN.yaml  IG-MED50035AB0.yaml  IG-MED84642MWN.yaml
data/: eProductType-enum.xml  eTestProcedure-enum.xml  release-notes.yaml
data/Interfaces/: ITI-67.page.md  ITI-68.page.md
extracted/: polarion-requirements.json  release-notes.json  requirements.json
src/: config.py  main.py
src/igtools/: commands.py  config.py  errors.py  main.py  startup_guard.py  version.py  versioning.py
src/igtools/config/: __init__.py  commands.py  config.py
src/igtools/extractor/: __init__.py  fhir.py
src/igtools/mappings/: polarion.yaml
src/igtools/migrations/: __init__.py  base.py  commands.py  errors.py  registry.py  runners.py
src/igtools/migrations/steps/: __init__.py  drop_actors_and_test_procedures.py
src/igtools/polarion/: __init__.py  commands.py  polarion.py
src/igtools/specifications/: __init__.py  commands.py  data.py  exporter.py  importer.py  manager.py  normalize.py  polarion.py  processor.py  release.py  releasenotes.py
src/igtools/utils/: __init__.py  arguments.py  cli.py  id.py  logger.py  utils.py
src/specifications/: __init__.py  manager.py
testdata/: test.md
tests/: test_config.py  test_config_cliapp.py  test_extractor_fhir.py  test_migrations_runners.py  test_migrations_runners_apply_migrations.py  test_specification_normalize.py  test_specification_polarion_exporter.py  test_specifications_commands.py  test_specifications_data.py  test_specifications_exporter.py  test_specifications_processor.py  test_specifications_release_manager.py  test_specifications_releasenotes.py  test_utils_id.py  test_utils_utils.py
tools/: convert_product_types.py
