[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "igtools"
version = "0.0.6"
description = "FHIR IG Tool"
authors = [{ name = "Ronald Martins", email = "ronald.martins@gematik.de" }]
license = { file = "LICENSE" }
dependencies = [
    "beautifulsoup4==4.12.3",
    "PyYAML==6.0.2",
    "requests==2.32.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0"
]

[project.scripts]
igtools = "igtools.main:main"

[igtools.setuptools]
package-dir = {"" = "src"}
packages = ["igtools"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests"
]