[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "igtools"
dynamic = ["version"]
description = "FHIR IG Tool"
authors = [{ name = "Ronald Martins", email = "ronald.martins@gematik.de" }]
license = { file = "LICENSE" }
dependencies = [
    "beautifulsoup4==4.12.3",
    "PyYAML==6.0.2",
    "requests==2.32.3"
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0"
]


[project.scripts]
igtools = "igtools.main:main"


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
igtools = ["mappings/*.yaml"]


[tool.setuptools.dynamic]
version = { attr = "igtools.version.__VERSION__" }


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests"
]

